2021-03-27  David Faust  <david.faust@oracle.com>

	* libpoke/ios-dev-file.c (ios_dev_file_convert_flags): Return
	-1 for bad flags to avoid collision with O_RDONLY == 0.
	(ios_dev_file_open): Update flags_for_open check accordingly.

2021-03-27  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-dump.pk (dump): Raise E_perm instead of E_no_ios if
	the specified IO space exists but is not readable.
	* testsuite/poke.cmd/dump-10.pk: Update accordingly.

2021-03-27  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (gnulib_modules): Import the gnulib `access'
	module.

2021-03-27  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.c (pk_cmd_file): Do not check for read
	permissions before actually attempting to open the file.
	* libpoke/ios-dev-file.c (ios_dev_file_open): Try to open in
	write-only mode if flags are not specified.

2021-03-27  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Exceptions): Document E_perm.

2021-03-27  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ios.c (ios_read_uint): Return IOS_EPERM if the IO space
	is not readable.
	(ios_read_int): Likewise.
	(ios_read_string): Likewise.
	(IOS_GET_C_ERR_CHCK): Likewise.
	* testsuite/poke.map/maps-perm-1.pk: New test.
	* testsuite/poke.map/maps-perm-2.pk: Likewise.
	* testsuite/poke.map/maps-perm-3.pk: Likewise.
	* testsuite/poke.map/maps-perm-4.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2021-03-27  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ios.h (IOS_EPERM): Define.
	* libpoke/pvm.jitter (PVM_PEEK): Raise PVM_E_PERM if the IO
	subsystem reports IOS_EPERM.
	(PVM_POKE): Likewise.
	(peeks): Likewise.
	(pokes): Likewise.

2021-03-27  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.h (PVM_E_PERM): Define.
	(PVM_E_PERM_MSG): Likewise.
	(PVM_E_PERM_ESTATUS): Likewise.
	* libpoke/pkl-rt.pk (EC_perm): New variable.
	(E_perm): Likewise.

2021-03-27  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>
