@@ -1,5 +1,0 @@
-/* { dg-do run } */
-/* { dg-data {c*} {0x66 0x6f 0x6f 0x00  0x50 0x60 0x70 0x80   0x90 0xa0 0xb0 0xc0} } */
-
-/* { dg-command { try string @ (8*8+1)#b = "quux"; catch if E_eof { printf "caught\n"; } } } */
-/* { dg-output "caught" } */
